--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,10 +28,20 @@
             <span class="navbar-text"> <%= @course.name %> (<%= @course.folder_name %>) </span>
           </li>
         <% end %>
+        <% if request.fullpath.starts_with?('/login') %>
+        <li><%= link_to "Continue in Read-Only Mode", root_path %></li>
+        <% else %>
         <li><%= link_to "Home", root_path %></li>
+        <% end %>
+        <% if (logged_in?) %>
         <li>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
+        <% else %>
+        <li>
+          <%= link_to "Login", login_path, method: :get %>
+        </li>
+        <% end %>
       </ul>
     </nav>
   </div>
