Changed users table in db, Added Google Auth and removed login page
Now logging in is entirely through google as opposed to making an account on iclickerviewer. Next up is add a verified component and clean the html.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,11 +29,11 @@
           </li>
         <% end %>
         <% if request.fullpath.starts_with?('/login') %>
-        <li><%= link_to "Continue in Read-Only Mode", root_path %></li>
+        <li><%= link_to "Continue Anonymously", root_path %></li>
         <% else %>
         <li><%= link_to "Home", root_path %></li>
         <% end %>
-        <% if (logged_in?) %>
+        <% if current_user %>
         <li>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
