--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -75,7 +75,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 <input type="hidden" id="old_dynamic_course_selected" name="old_dynamic_course_selected" value=""/>
 <input type="hidden" id="old_dynamic_class_period_selected" name="old_dynamic_class_period_selected" value=""/>
 <input type="hidden" id="old_dynamic_question_selected" name="old_dynamic_question_selected" value=""/>
-<% if logged_in? %>
+<% if current_user %>
 <%= submit_tag 'Update data', class: "updatebutton"%>
 <%# link_to "Reload Course Hash", update_course_hash_path(@class_period), method: :get%>
 <%= link_to "Reload Course Hash", "/update_course_hash/#{@class_period.id}", method: :get %>
@@ -163,12 +163,12 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
       <b> <%= link_to question.question_index, question_path(question) %> </b>
     </td>
     <td>
-      <%= if (logged_in?)
+      <%= if current_user
         q.select :question_type, [
         ["unknown", 0],
         ["quiz", 1],
         ["single", 2],
-        ["paired", 3],
+        ["paired", current_user],
         ["non-MCQ", 4],
         ["error", 5]
       ], {}, { class: "question_type_#{q.object.question_index}" }
@@ -177,7 +177,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
     </td>
     <td>
 <%# HACK: creating this.old_question_pair in the DOM to store the previously selected value %>
-<% if logged_in? %>
+<% if current_user %>
       <%= q.select :question_pair, question_pair_options(q.object, @questions),
         { include_blank: true },
         { onclick: "this.old_question_pair = $(this).val();",
@@ -199,7 +199,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
     </td>
     <td>
       <table>
-        <% if logged_in? %>
+        <% if current_user %>
         <tr>
           <th> <%= q.label :correct_a, "A" %> </th>
           <th> <%= q.label :correct_b, "B" %> </th>
@@ -237,7 +237,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 
       TODO: Mark the radio buttons for existing matches with the match_type
       %>
-      <% if logged_in? %>
+      <% if current_user %>
       <table border="1">
         <tr align="center">
           <th> qid </th>
@@ -310,7 +310,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
   <% end %>
   <% end %>
 </table>
-<% if logged_in? %>
+<% if current_user %>
 <%= submit_tag 'Update data', class: "updatebutton" %>
 <% end %>
 <% end %>
