--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,6 +37,10 @@
         <li>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
+        <li>
+          <%= current_user.email %>
+        </li>
+
         <% else %>
         <li>
           <%= link_to "Login", login_path, method: :get %>
