--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,8 @@
 <footer class="footer">
+  <% if current_user %>
+  <%= current_user.verification %>
+  <%= current_user.email %>
+  <% end %>
   <small>
     <a href="https://github.com/jspacco/iclickerviewer">iclickerviewer</a> by <a href="http://jspacco.github.io"> jspacco </a>
   </small>
