Simplied Migrations, all contained in AddDeviseToUsers
Added admin page, access works but will need to update callback url in config.rb as well as change verification level of first user.

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -75,7 +75,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 <input type="hidden" id="old_dynamic_course_selected" name="old_dynamic_course_selected" value=""/>
 <input type="hidden" id="old_dynamic_class_period_selected" name="old_dynamic_class_period_selected" value=""/>
 <input type="hidden" id="old_dynamic_question_selected" name="old_dynamic_question_selected" value=""/>
-<% if current_user %>
+<% if is_verified?(current_user,0) %>
 <%= submit_tag 'Update data', class: "updatebutton"%>
 <%# link_to "Reload Course Hash", update_course_hash_path(@class_period), method: :get%>
 <%= link_to "Reload Course Hash", "/update_course_hash/#{@class_period.id}", method: :get %>
@@ -163,21 +163,22 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
       <b> <%= link_to question.question_index, question_path(question) %> </b>
     </td>
     <td>
-      <%= if current_user
+      <%= if current_user && current_user.verification >0
         q.select :question_type, [
         ["unknown", 0],
         ["quiz", 1],
         ["single", 2],
-        ["paired", current_user],
+        ["paired", 3],
         ["non-MCQ", 4],
         ["error", 5]
       ], {}, { class: "question_type_#{q.object.question_index}" }
     end
     %>
     </td>
+
     <td>
 <%# HACK: creating this.old_question_pair in the DOM to store the previously selected value %>
-<% if current_user %>
+<% if current_user && current_user.verification >0 %>
       <%= q.select :question_pair, question_pair_options(q.object, @questions),
         { include_blank: true },
         { onclick: "this.old_question_pair = $(this).val();",
@@ -199,7 +200,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
     </td>
     <td>
       <table>
-        <% if current_user %>
+        <% if current_user && current_user.verification >0 %>
         <tr>
           <th> <%= q.label :correct_a, "A" %> </th>
           <th> <%= q.label :correct_b, "B" %> </th>
@@ -237,7 +238,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 
       TODO: Mark the radio buttons for existing matches with the match_type
       %>
-      <% if current_user %>
+      <% if current_user && current_user.verification >0 %>
       <table border="1">
         <tr align="center">
           <th> qid </th>
@@ -310,7 +311,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
   <% end %>
   <% end %>
 </table>
-<% if current_user %>
+<% if current_user && current_user.verification >0 %>
 <%= submit_tag 'Update data', class: "updatebutton" %>
 <% end %>
 <% end %>
