--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,11 +33,18 @@
         <% else %>
         <li><%= link_to "Home", root_path %></li>
         <% end %>
-        <% if current_user %>
+        <% if current_user && current_user.verification >1 %>
         <li>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
-        <% else %>
+        <li>
+          <%= link_to "Admin Page", admin_index_path, method: :get %>
+        </li>
+        <% elsif current_user %>
+          <li>
+        <%= link_to "Log out", logout_path, method: :delete %>
+        </li>
+          <% else %>
         <li>
           <%= link_to "Login", login_path, method: :get %>
         </li>
