--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,6 @@
   <%= current_user.email %>
   <% end %>
   <small>
-    <a href="https://github.com/jspacco/iclickerviewer">iclickerviewer</a> by <a href="http://jspacco.github.io"> jspacco </a>
+    <a href="https://github.com/jspacco/iclickerviewer">iclickerviewer</a> by <a href="http://jspacco.github.io"> jspacco </a> and <a href="https://github.com/ebkaylor"> ebkaylor </a>
   </small>
 </footer>
