--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,18 +35,20 @@
         <% end %>
         <% if current_user && current_user.verification >1 %>
         <li>
-          <%= link_to "Log out", logout_path, method: :delete %>
+          <%# link_to "Log out", logout_path, method: :delete %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
         <li>
           <%= link_to "Admin Page", admin_index_path, method: :get %>
         </li>
         <% elsif current_user %>
           <li>
-        <%= link_to "Log out", logout_path, method: :delete %>
+        <%# link_to "Log out", logout_path, method: :delete %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
           <% else %>
         <li>
-          <%= link_to "Login", login_path, method: :get %>
+          <%= link_to "Login", user_google_oauth2_omniauth_authorize_path %>
         </li>
         <% end %>
       </ul>
