--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -270,7 +270,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
           <th> modified </th>
           <th> delete? </th>
         </tr>
-        <% MatchingQuestion.where(question_id: q.object.id, :is_match => [0, 1]).each do |mq| %>
+        <% MatchingQuestion.where(question_id: q.object.id, :is_match => 1).each do |mq| %>
         <tr align="center">
           <td>
             <%= mq.matching_question_id %>
