using the is_verified? method for class_periods#show

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -262,7 +262,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
         possibly in a big chain of links?
       TODO: Could this be its own partial ERB view element?
       %>
-      <% if current_user && current_user.verification >0 %>
+      <% if is_verified?(current_user, 1) %>
       <table border="1">
         <tr align="center">
           <th> qid </th>
