--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -27,7 +27,9 @@
       <td> <%= course.instructor %> </td>
       <td> <%= @all_class_stats[course.id][:avg_num_questions].round(1) %> </td>
       <td> <%= @all_class_stats[course.id][:avg_time].round(1) %> </td>
-      <% if @class_period_updated_counts[course.id][0] > 0 %>
+      <% if @class_period_updated_counts[course.id][1] -
+            @class_period_updated_counts[course.id][0] > 0
+      %>
         <td class="todo">
       <% else %>
         <td>
